# Master_thesis

./: README.md  pyproject.toml
src/: DRY_RUN_VAE.py  VAE_.py  VAE_results.py  data_checker.py  inspect_encoded_sequence.py  one_hot_encoder.py
