[tool.poetry]
name = "msc"
version = "0.1.0"
description = ""
authors = ["fuadd <fuadd@ulrik.uio.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.1.0"
torch = "^2.0.1"
scipy = "^1.11.2"
numpy = "^1.24.3"
matplotlib = "^3.7.3"
seaborn = "^0.12.2"
plotly = "^5.16.1"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
tensorflow = "^2.13.0"
keras = "^2.14.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.20"
pyarrow = "^13.0.0"
docker = "^6.1.3"
logging = "^0.4.9.6"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
olga = {git = "https://github.com/statbiophys/OLGA.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
